@@ -9,19 +9,30 @@
 (defgeneric documentation (x doc-type)
   (:method ((x function) (doc-type (eql 't)))
     (declare (ignore doc-type))
-    (documentation (sys::function-name x) 'function))
+    (if (typep-class x <standard-generic-function>)
+      (std-gf-documentation x)
+      (documentation (sys::function-name x) 'function)))
   (:method ((x function) (doc-type (eql 'function)))
     (declare (ignore doc-type))
-    (documentation (sys::function-name x) 'function))
+    (if (typep-class x <standard-generic-function>)
+      (std-gf-documentation x)
+      (documentation (sys::function-name x) 'function)))
   (:method ((x list) (doc-type (eql 'function)))
     (declare (ignore doc-type))
-    (documentation (second (check-function-name 'documentation x)) 'setf))
+    (setq x (check-function-name 'documentation x))
+    (if (and (fboundp x) (typep-class (fdefinition x) <standard-generic-function>))
+      (std-gf-documentation (fdefinition x))
+      (documentation (second x) 'setf)))
   (:method ((x list) (doc-type (eql 'compiler-macro)))
     (declare (ignore doc-type))
     (documentation (second (check-function-name  'documentation x))
                    'setf-compiler-macro))
+  (:method ((x symbol) (doc-type (eql 'function)))
+    (if (and (fboundp x) (typep-class (fdefinition x) <standard-generic-function>))
+      (std-gf-documentation (fdefinition x))
+      (getf (gethash x sys::*documentation*) doc-type)))
   (:method ((x symbol) (doc-type symbol))
-    ;; doc-type = `function', `compiler-macro', `setf', `variable', `type',
+    ;; doc-type = `compiler-macro', `setf', `variable', `type',
     ;; `setf-compiler-macro'
     (getf (gethash x sys::*documentation*) doc-type))
   (:method ((x symbol) (doc-type (eql 'type)))
@@ -88,21 +99,31 @@
 (defgeneric (setf documentation) (new-value x doc-type)
   (:method (new-value (x function) (doc-type (eql 't)))
     (declare (ignore doc-type))
-    (sys::%set-documentation (sys::function-name x) 'function new-value))
+    (if (typep-class x <standard-generic-function>)
+      (setf (std-gf-documentation x) new-value)
+      (sys::%set-documentation (sys::function-name x) 'function new-value)))
   (:method (new-value (x function) (doc-type (eql 'function)))
     (declare (ignore doc-type))
-    (sys::%set-documentation (sys::function-name x) 'function new-value))
+    (if (typep-class x <standard-generic-function>)
+      (setf (std-gf-documentation x) new-value)
+      (sys::%set-documentation (sys::function-name x) 'function new-value)))
   (:method (new-value (x list) (doc-type (eql 'function)))
     (declare (ignore doc-type))
-    (sys::%set-documentation
-     (second (check-function-name '(setf documentation) x)) 'setf new-value))
+    (setq x (check-function-name '(setf documentation) x))
+    (if (and (fboundp x) (typep-class (fdefinition x) <standard-generic-function>))
+      (setf (std-gf-documentation (fdefinition x)) new-value)
+      (sys::%set-documentation (second x) 'setf new-value)))
   (:method (new-value (x list) (doc-type (eql 'compiler-macro)))
     (declare (ignore doc-type))
     (sys::%set-documentation
      (second (check-function-name '(setf documentation) x))
      'setf-compiler-macro new-value))
+  (:method (new-value (x symbol) (doc-type (eql 'function)))
+    (if (and (fboundp x) (typep-class (fdefinition x) <standard-generic-function>))
+      (setf (std-gf-documentation (fdefinition x)) new-value)
+      (sys::%set-documentation x doc-type new-value)))
   (:method (new-value (x symbol) (doc-type symbol))
-    ;; doc-type = `function', `compiler-macro', `setf', `variable', `type',
+    ;; doc-type = `compiler-macro', `setf', `variable', `type',
     ;; `setf-compiler-macro'
     (sys::%set-documentation x doc-type new-value))
   (:method (new-value (x symbol) (doc-type (eql 'type)))
